--- a/recipes/periperi.html
+++ b/recipes/periperi.html
@@ -12,8 +12,8 @@
     <img src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png"; width="500">
 
     <p>This recipe will help you make delicious peri peri chicken wings for four people. 
-        It requires little ingredients and is one of the easiest recipes on our site. I
-        n 30 minutes of prep. time, you'll be ready to enjoy these delicious wings.</p>
+        It requires little ingredients and is one of the easiest recipes on our site. 
+        In 30 minutes of prep. time, you'll be ready to enjoy these delicious wings.</p>
 
     <p><h4>Ingredients:</h4></p>
 
@@ -21,7 +21,25 @@
         <li>8kg chicken wings</li>
         <li>Kewpie mayo, to serve</li>
         <li>Sliced green chilli, to serve</li>
-        <li><a href="sauce.html">Peri peri sauce</a></li>
+        <li><a href="./sauce.html">Peri peri sauce</a></li>
     </ul>
+
+    <p><h4>Steps:</h4></p>
+
+    <ol>
+        <p><li>For the peri peri sauce, grill chillies and capsicum on an open flame until charred and blackened. 
+            Place in a bowl, cover with plastic wrap, and steam for 5 minutes.</li></p>
+
+        <p><li>Peel and discard skin and stems, then place in a food processor with remaining ingredients, 1 tsp salt 
+            flakes and 1/2 tsp freshly ground black pepper. Whiz until finely chopped. Transfer to a medium saucepan 
+            over medium heat and simmer for 8-10 minutes until thickened. Remove from the heat and set aside to cool.</li></p>
+
+        <p><li>Place 1/2 cup peri peri and chicken wings in a bowl, toss to combine, and marinate for at least 1 hour, 
+            or overnight in the fridge if time permits. Remove from the fridge 1 hour before cooking.</li></p>
+
+        <p><li>Preheat a barbecue with a lid to medium-high heat. Season chicken with salt flakes and grill, turning, f
+            or 12-15 minutes until lightly charred and cooked through. Serve with remaining peri peri, Kewpie, 
+            sliced chilli and lime halves alongside.</li></p>
+    </ol>
 </body>
 </html>
