Add alt text to my images

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
     <uo>
         <p><a href="./recipes/periperi.html"><li>Peri peri chicken wings</li></a></p>
+        <img src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png"; 
+    width="500"; alt="Peri peri chicken wings">
         <p><a href="./recipes/noodles.html"><li>Green tea noodles with sticky sweet chilli salmon</li></a></p>
-        <p><a href="./recipes/schnitzel.html"><li>Easy curried schnitzels</li></a></p>
+        <img src="https://img.delicious.com.au/EEJ2ozkv/del/2020/10/green-tea-noodles-with-sticky-sweet-chilli-salmon-140868-2.jpg"; 
+    width="500"; alt="Green tea noodles">
     </uo>
 </body>
 </html>
