--- a/recipes/periperi.html
+++ b/recipes/periperi.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Peri peri chicken wings</h1>
 
-    <img src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png"; width="500">
+    <img src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png"; 
+    width="500"; alt="Peri peri chicken wings">
 
     <p>This recipe will help you make delicious peri peri chicken wings for four people. 
         It requires little ingredients and is one of the easiest recipes on our site. 
@@ -41,5 +42,7 @@
             or 12-15 minutes until lightly charred and cooked through. Serve with remaining peri peri, Kewpie, 
             sliced chilli and lime halves alongside.</li></p>
     </ol>
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
