Finish second recipe

--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -12,35 +12,46 @@
     <img src="https://img.delicious.com.au/EEJ2ozkv/del/2020/10/green-tea-noodles-with-sticky-sweet-chilli-salmon-140868-2.jpg"; 
     width="500"; alt="Green tea noodles">
 
-    <p>This recipe will help you make delicious peri peri chicken wings for four people. 
+    <p>This recipe will help you make <strong>delicious</strong> green tea noodles for four people. 
         It requires little ingredients and is one of the easiest recipes on our site. 
-        In 30 minutes of prep. time, you'll be ready to enjoy these delicious wings.</p>
+        In 30 minutes of prep. time, you'll be ready to enjoy this dish.</p>
 
     <p><h4>Ingredients:</h4></p>
 
     <ul>
-        <li>8kg chicken wings</li>
-        <li>Kewpie mayo, to serve</li>
-        <li>Sliced green chilli, to serve</li>
-        <li><a href="./sauce.html">Peri peri sauce</a></li>
+        <li>1/2 cup (125ml) peanut oil</li>
+        <li>1 tbs finely chopped ginger</li>
+        <li>3 long shallots, thinly sliced</li>
+        <li>1 lemongrass stalk, finely grated</li>
+        <li>1 1/2 tbs runny honey</li>
+        <li>2 tbs extra virgin olive oil</li>
+        <li>80g chilli paste in soybean soil</li>
+        <li>600g skinless salmon filet</li>
+        <li>1 tbs finely chopped ginger</li>
+        <li>240g pack dried green tea noodles</li>
+        <li>1/3 cup (80ml) lime juice</li>
+        <li>2 1/2 tsp caster sugar</li>
+        <li>2 tps fish sauce</li>
+        <li>1/2 tsp chilli flakes, plus extra to serve</li>
     </ul>
 
     <p><h4>Steps:</h4></p>
 
     <ol>
-        <p><li>For the peri peri sauce, grill chillies and capsicum on an open flame until charred and blackened. 
-            Place in a bowl, cover with plastic wrap, and steam for 5 minutes.</li></p>
+        <p><li>Preheat oven to 220°C. Heat peanut oil in a small saucepan over low heat. A
+            dd ginger, long green shallot, lemongrass and a pinch of salt. Cook, stirring occasionally, 
+            for 6-8 minutes until long green shallot is very soft but not coloured. Remove from heat and cool.</li></p>
 
-        <p><li>Peel and discard skin and stems, then place in a food processor with remaining ingredients, 1 tsp salt 
-            flakes and 1/2 tsp freshly ground black pepper. Whiz until finely chopped. Transfer to a medium saucepan 
-            over medium heat and simmer for 8-10 minutes until thickened. Remove from the heat and set aside to cool.</li></p>
+        <p><li>Meanwhile, combine honey, olive oil and chilli paste in a bowl. Stir to combine. Line a baking tray with 
+            baking paper and add salmon. Rub honey mixture over salmon to coat, then season. Roast for 12-15 minutes for 
+            medium. Set aside, loosely covered with foil, to rest for 5 minutes.</li></p>
 
-        <p><li>Place 1/2 cup peri peri and chicken wings in a bowl, toss to combine, and marinate for at least 1 hour, 
-            or overnight in the fridge if time permits. Remove from the fridge 1 hour before cooking.</li></p>
+        <p><li>Cook noodles according to packet instructions. Drain and rinse briefly with warm water.</li></p>
 
-        <p><li>Preheat a barbecue with a lid to medium-high heat. Season chicken with salt flakes and grill, turning, f
-            or 12-15 minutes until lightly charred and cooked through. Serve with remaining peri peri, Kewpie, 
-            sliced chilli and lime halves alongside.</li></p>
+        <p><li>Whisk lime juice, sugar, fish sauce and chilli flakes into the shallot oil mixture. Place noodles in a 
+            large bowl with three quarters of the shallot oil, season and toss to combine. Arrange on a serving platter
+             and flake salmon over the top. Drizzle over remaining shallot oil and scatter with extra chilli flakes, 
+             toasted sesame seeds and shiso leaves. Serve at room temperature or chilled.</li></p>
     </ol>
 
     <a href="../index.html">Home</a>
