--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -40,7 +40,7 @@
     <ol>
         <p><li>Preheat oven to 220°C. Heat peanut oil in a small saucepan over low heat. A
             dd ginger, long green shallot, lemongrass and a pinch of salt. Cook, stirring occasionally, 
-            for 6-8 minutes until long green shallot is very soft but not coloured. Remove from heat and cool.</li></p>
+            for 6-8 minutecs until long green shallot is very soft but not coloured. Remove from heat and cool.</li></p>
 
         <p><li>Meanwhile, combine honey, olive oil and chilli paste in a bowl. Stir to combine. Line a baking tray with 
             baking paper and add salmon. Rub honey mixture over salmon to coat, then season. Roast for 12-15 minutes for 
