--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 
 <body>
-<h1>Recipes</h1> 
+<button class="title">Recipes</button> 
+<div class="recipe">
 <ul>
     <li><a href="./recipes/periperi.html">Peri peri chicken wings</a></li>
 </ul>
-    <img src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png" alt="Peri peri chicken wings">
+</div>
+    <img class="food chicken" src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png" alt="Peri peri chicken wings">
+
+<div class="recipe">
 <ul>
     <li><a href="./recipes/noodles.html">Green tea noodles with sticky sweet chilli salmon</a></li>
 </ul>
-    <img src="https://img.delicious.com.au/EEJ2ozkv/del/2020/10/green-tea-noodles-with-sticky-sweet-chilli-salmon-140868-2.jpg" alt="Green tea noodles">
-
+    <img class="food noodles" src="https://img.delicious.com.au/EEJ2ozkv/del/2020/10/green-tea-noodles-with-sticky-sweet-chilli-salmon-140868-2.jpg" alt="Green tea noodles">
+</div>
 </body>
 </html>
