--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <button class="title">Recipes</button> 
-    <div class="recipe">
-      <ul>
-        <li><a href="./recipes/periperi.html">Peri peri chicken wings</a></li>
-      </ul>
-    </div>
-    <a href="./recipes/periperi.html"><img class="img chicken" src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png" alt="Peri peri chicken wings"></a>
-    <div class="recipe">
-      <ul>
-        <li><a href="./recipes/noodles.html">Green tea noodles with sticky sweet chilli salmon</a></li>
-      </ul>
-      <a href="./recipes/noodles.html"><img class="img noodles" src="https://img.delicious.com.au/EEJ2ozkv/del/2020/10/green-tea-noodles-with-sticky-sweet-chilli-salmon-140868-2.jpg" alt="Green tea noodles"></a>
+   <h1 class="title">Recipes</h1>
+    <div class="container">
+       <img class="img chicken" src="https://img.delicious.com.au/nWRqYVbP/w759-h506-q80-cfill/del/2022/05/del_0622_south_africa_0037-168318-1.png" alt="Peri peri chicken wings">
+        <div class="overlay">
+            <div class="text"> <a href="./recipes/periperi.html">Peri peri chicken wings</a></div>
+        </div>
+    </div> 
+    <div class="container">
+        <img class="img noodles" src="https://img.delicious.com.au/EEJ2ozkv/del/2020/10/green-tea-noodles-with-sticky-sweet-chilli-salmon-140868-2.jpg" alt="Green tea noodles">
+        <div class="overlay">
+            <div class="text"><a href="./recipes/noodles.html">Green tea noodles with sticky sweet chilli salmon</a></div>
+        </div>
     </div>
 </body>
 </html>
